# stc-framework

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  ai-hub-prd.md  docker-compose.kong.yaml  docker-compose.yaml  pyproject.toml
.github/: deploy-matrix.yaml
.github/workflows/: ci.yml  deploy.yml
adversarial/: run_red_team.py
docs/: ARCHITECTURE.md  DECISIONS.md  FAQ.md  GLOSSARY.md  GOTCHAS.md  GUIDED_TOUR.md  STC_Cyber_Defense_Framework.docx  STC_Data_Governance_Framework.docx  STC_Enterprise_Architecture.docx  STC_Framework_Architecture_and_Capabilities.docx  STC_JIRA_Specification.docx  STC_Product_Requirements_Document.docx  STC_Security_Architecture.docx  STC_System_Design_Document.docx  ai_hub_mvp.md  index.html  v030_integration.md
docs/aiuc-1-crosswalk/: README.md
docs/architecture/: README.md  aiuc-1-crosswalk.md
docs/deployment/: aws.md  feature_flags.md
docs/operations/: ENTERPRISE_READINESS.md  RUNBOOK.md  deployment.md  multitenancy.md  observability.md  redis.md  resilience.md  scaling.md
docs/security/: GOVERNANCE_AUDIT.md  SECURITY_AUDIT.md  STAFF_REVIEW.md  V030_STAFF_REVIEW.md
docs/showcase/: STC_Framework_Showcase.html
experimental/: README.md  docker-compose.bifrost.yaml  requirements.txt
experimental/critic/: governance_engine.py
experimental/governance/: data_catalog.py
experimental/infrastructure/: session_state.py
experimental/observability/: stc_observability.py
experimental/operational/: cost_controls.py
experimental/orchestration/: STC_Multi_Agent_Orchestration.docx  workflow_engine.py
experimental/reference-impl/config/: litellm_config.yaml
experimental/reference-impl/documents/: acme_corp_10k_fy2024.txt
experimental/reference-impl/evaluation/: run_baseline.py
experimental/reference-impl/scripts/: run_agent.py
experimental/regulation/: STC_FINRA_NYDFS_Pressure_Test.docx  ethical_legal.py  regulatory_ops.py
experimental/risk/: STC_Enterprise_Risk_Management.docx  risk_adjusted_optimizer.py  risk_register.py
experimental/security/: pen_testing.py
experimental/sentinel/: README.md  __init__.py  adapters.py  explainability.py  mcp_catalog.py
experimental/stalwart/: financial_qa_agent.py
experimental/stc-audit-update/operational/: control_testing.py  exception_manager.py
governance/: data_lineage.py
infra/docker/: docker-compose.yaml
infra/docker/adot/: collector.yaml
infra/docker/ld-relay/: Dockerfile
infra/terraform/: README.md  backend.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/terraform/bootstrap/: main.tf
infrastructure/: perf_testing.py
reference-impl/scripts/: load_documents.py
regulation/: ai_sovereignty.py  rule_2210.py
scripts/: docgen.py  gen_all_docs.py  gen_cyber_defense.py  gen_data_governance.py  gen_enterprise_architecture.py  gen_framework_architecture.py  gen_jira_spec.py  gen_prd.py  gen_sdd.py  gen_security_architecture.py  smoke_docker.sh  sync_from_session.py
security/: threat_detection.py
sentinel/: gateway.py  runtime_firewall.py
spec/: README.md  loader.py
spec-examples/: financial_qa.yaml
src/stc_framework/: __init__.py  errors.py  system.py
src/stc_framework/_internal/: __init__.py  alerter.py  metrics_safe.py  patterns.py  scoring.py  state_machine.py  ttl.py
src/stc_framework/adapters/: __init__.py
src/stc_framework/adversarial/: __init__.py  probes.py  runner.py
src/stc_framework/ai_hub/: __init__.py  allowlist.py  audit_record.py  errors.py  fail_behavior.py  filter_chain.py  rate_limits.py
src/stc_framework/compliance/: __init__.py  bias_fairness.py  explainability.py  fiduciary.py  ip_risk.py  legal_hold.py  nydfs_notification.py  part_500_cert.py  patterns.py  privilege_routing.py  reg_bi.py  rule_2210.py  transparency.py
src/stc_framework/config/: __init__.py  logging.py  settings.py
src/stc_framework/critic/: __init__.py  critic.py  escalation.py  rails.py
src/stc_framework/feature_flags/: __init__.py  cli.py  client.py  flags.py  subsystem_registry.py
src/stc_framework/governance/: __init__.py  anomaly.py  budget.py  budget_controls.py  catalog.py  cli.py  destruction.py  dsar.py  erasure.py  events.py  idempotency.py  lineage.py  rate_limit.py  retention.py
src/stc_framework/infrastructure/: __init__.py  perf_testing.py  redis_store.py  session_state.py  store.py
src/stc_framework/observability/: __init__.py  audit.py  correlation.py  health.py  inflight.py  metrics.py  tracing.py
src/stc_framework/orchestration/: __init__.py  registry.py  simulation.py  workflow.py
src/stc_framework/reference_impl/: __init__.py
src/stc_framework/resilience/: __init__.py  bulkhead.py  circuit.py  degradation.py  fallback.py  retry.py  timeout.py
src/stc_framework/risk/: __init__.py  kri.py  (+2 more)
tests/: conftest.py
tests/contract/: test_keyvalue_store_contract.py  test_llm_contract.py  test_prompt_registry_contract.py  test_vector_contract.py
tests/fixtures/: minimal_spec.yaml
tests/property/: test_classifier_monotonicity.py  test_numerical_properties.py
tests/unit/: test_adversarial.py  test_ai_hub_allowlist.py  test_ai_hub_audit_and_matrix.py  test_ai_hub_errors.py  test_ai_hub_filter_chain.py  test_ai_hub_rate_limits.py  test_budget_controls.py  test_catalog.py  test_classifier.py  test_compliance_misc.py  test_compliance_rule_2210.py  test_degradation.py  test_destruction.py  test_enterprise.py  test_errors.py  test_escalation.py  test_feature_flags.py  test_hallucination_validator.py  test_injection_validator.py  test_internal_helpers.py  test_kri.py  test_lineage.py  test_mcp_policy.py  test_numerical_validator.py  test_observability.py  test_optimizer.py  test_orchestration.py  test_pen_testing.py  test_perf_testing.py  test_privacy.py  test_prompt_registry.py  test_redaction.py  test_redis_store_unit.py  test_resilience.py  test_reward.py  test_risk_optimizer.py  test_risk_register.py  test_scope_validator.py  test_security.py  test_session_state.py  (+13 more)
trainer/: optimization_manager.py
(+138 files in other folders)
